# 258839R_IT5437_CV_Assignment_2

./: .gitignore  README.md  pyproject.toml
data/: selected_points.npz
notebooks/: a_introduction.html  a_introduction.ipynb  c_intensity_transformations.html  c_intensity_transformations.ipynb  e_edges_corners_and_blobs.html  e_edges_corners_and_blobs.ipynb  f_fitting.html  f_fitting.ipynb
src/: build_report.py  problem1_line_fitting.ipynb  problem2_camera_geometry.ipynb  problem3_alignment.ipynb  select_points.py
